servicepoint2/sp2-bindings.h

/**
 * A connection to the display.
 */
typedef struct sp2_Connection sp2_Connection;
/**
 * A grid of pixels stored in packed bytes.
 */
typedef struct sp2_PixelGrid sp2_PixelGrid;
/**
 * Closes and deallocates a connection instance
 */
void sp2_connection_dealloc(struct sp2_Connection *ptr);
/**
 * Creates a new `PixelGrid` instance.
 * The returned instance has to be freed with `pixel_grid_dealloc`.
 */
struct sp2_PixelGrid *sp2_pixel_grid_new(uintptr_t width, uintptr_t height);
/**
 * Loads a `PixelGrid` with the specified dimensions from the provided data.
 * The returned instance has to be freed with `pixel_grid_dealloc`.
 */
struct sp2_PixelGrid *sp2_pixel_grid_load(uintptr_t width,
                                          uintptr_t height,
                                          const uint8_t *data,
                                          uintptr_t data_length);
/**
 * Clones a `PixelGrid`.
 * The returned instance has to be freed with `pixel_grid_dealloc`.
 */
struct sp2_PixelGrid *sp2_pixel_grid_clone(const struct sp2_PixelGrid *this_);
/**
 * Deallocates a `PixelGrid`.
 *
 * Note: do not call this if the grid has been consumed in another way, e.g. to create a command.
 */
void sp2_pixel_grid_dealloc(struct sp2_PixelGrid *this_);
/**
 * Get the current value at the specified position
 */
bool sp2_pixel_grid_get(const struct sp2_PixelGrid *this_, uintptr_t x, uintptr_t y);
/**
 * Sets the current value at the specified position
 */
void sp2_pixel_grid_set(struct sp2_PixelGrid *this_, uintptr_t x, uintptr_t y, bool value);
/**
 * Fills the whole `PixelGrid` with the specified value
 */
void sp2_pixel_grid_fill(struct sp2_PixelGrid *this_, bool value);
/**
 * Gets the width in pixels of the `PixelGrid` instance.
 */
uintptr_t sp2_pixel_grid_width(const struct sp2_PixelGrid *this_);
/**
 * Gets the height in pixels of the `PixelGrid` instance.
 */
uintptr_t sp2_pixel_grid_height(const struct sp2_PixelGrid *this_);