servicepoint2-binding-cs/src/BindGen/ServicePoint2.g.cs


        /// <summary>Closes and deallocates a connection instance</summary>
        [DllImport(__DllName, EntryPoint = "sp2_connection_dealloc", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp2_connection_dealloc(Connection* ptr);

        /// <summary>Creates a new `PixelGrid` instance. The returned instance has to be freed with `pixel_grid_dealloc`.</summary>
        [DllImport(__DllName, EntryPoint = "sp2_pixel_grid_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern PixelGrid* sp2_pixel_grid_new(nuint width, nuint height);

        /// <summary>Loads a `PixelGrid` with the specified dimensions from the provided data. The returned instance has to be freed with `pixel_grid_dealloc`.</summary>
        [DllImport(__DllName, EntryPoint = "sp2_pixel_grid_load", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern PixelGrid* sp2_pixel_grid_load(nuint width, nuint height, byte* data, nuint data_length);

        /// <summary>Clones a `PixelGrid`. The returned instance has to be freed with `pixel_grid_dealloc`.</summary>
        [DllImport(__DllName, EntryPoint = "sp2_pixel_grid_clone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern PixelGrid* sp2_pixel_grid_clone(PixelGrid* @this);

        /// <summary>Deallocates a `PixelGrid`.  Note: do not call this if the grid has been consumed in another way, e.g. to create a command.</summary>
        [DllImport(__DllName, EntryPoint = "sp2_pixel_grid_dealloc", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp2_pixel_grid_dealloc(PixelGrid* @this);

        /// <summary>Get the current value at the specified position</summary>
        [DllImport(__DllName, EntryPoint = "sp2_pixel_grid_get", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool sp2_pixel_grid_get(PixelGrid* @this, nuint x, nuint y);

        /// <summary>Sets the current value at the specified position</summary>
        [DllImport(__DllName, EntryPoint = "sp2_pixel_grid_set", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp2_pixel_grid_set(PixelGrid* @this, nuint x, nuint y, [MarshalAs(UnmanagedType.U1)] bool value);

        /// <summary>Fills the whole `PixelGrid` with the specified value</summary>
        [DllImport(__DllName, EntryPoint = "sp2_pixel_grid_fill", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void sp2_pixel_grid_fill(PixelGrid* @this, [MarshalAs(UnmanagedType.U1)] bool value);

        /// <summary>Gets the width in pixels of the `PixelGrid` instance.</summary>
        [DllImport(__DllName, EntryPoint = "sp2_pixel_grid_width", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern nuint sp2_pixel_grid_width(PixelGrid* @this);

        /// <summary>Gets the height in pixels of the `PixelGrid` instance.</summary>
        [DllImport(__DllName, EntryPoint = "sp2_pixel_grid_height", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern nuint sp2_pixel_grid_height(PixelGrid* @this);

        /// <summary>Gets a reference to the data of the `PixelGrid` instance.</summary>
        [DllImport(__DllName, EntryPoint = "sp2_pixel_grid_data_ref", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern byte* sp2_pixel_grid_data_ref(PixelGrid* @this);


    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct BitVec
    {
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct ByteGrid
    {
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct Connection
    {
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe partial struct PixelGrid
    {
    }


    public enum Command
    {
        Clear,
        HardReset,
        FadeOut,
        CharBrightness,
        Brightness,
        BitmapLegacy,
        BitmapLinear,
        BitmapLinearAnd,
        BitmapLinearOr,
        BitmapLinearXor,
        Cp437Data,
        BitmapLinearWin,
    }

    public enum CompressionCode : ushort
    {
        Uncompressed = 0,
        Gz = 26490,
        Bz = 25210,
        Lz = 27770,
        Zs = 31347,
    }


}
